# ocp-sizing

./: .dockerignore  .gitignore  ANALYSIS_AND_OPTIMIZATION_PLAN.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  app.py  data_processor.py  generate_dashboard.py  generate_report.py  napa-prod.html  ocp_sizing_calculator.py  ocp_sizing_calculator_v1.1.py  pyproject.toml  requirements-web.txt  requirements.txt  ziko.html
.claude/: settings.local.json
.claude/agents/: python-modularization-analyzer.md  python-modularization-implementer.md
analyzers/: __init__.py  cluster_analyzer.py  recommendation_engine.py  workload_analyzer.py
components/: __init__.py  base.py  scripts.py  styles.py  tab_forecast.py  tab_hosts.py  tab_overview.py  tab_trends.py
documentation/: components-refactor-plan.md  html-reporter-refactor-plan.md  reporters-architecture.md
models/: __init__.py
openshift/: buildconfig.yaml  deployment.yaml  service-route.yaml
parsers/: __init__.py  metrics_parser.py  nodes_parser.py  pods_metrics_parser.py  storage_parser.py  utils.py
reporters/: __init__.py  components.py  html_reporter.py  layout.py  pdf_exporter.py  report_context.py  scripts.py  styles.py
reporters/tabs/: __init__.py  checklist.py  efficiency.py  nodes.py  overview.py  recommendations.py  storage.py  workload_inventory.py  workloads.py
sample_data/vmware/: sample_with_dates.xlsx
sources/: __init__.py  base_processor.py  rhv_hosts_processor.py  rhv_processor.py  vmware_processor.py
