[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-sizing-calculator"
version = "2.0.0"
description = "OpenShift Container Platform Sizing Calculator - Analyze Kubernetes clusters for OCP migration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ziko", email = "aelnatsh@redhat.com"}
]
keywords = [
    "openshift",
    "kubernetes",
    "k8s",
    "ocp",
    "sizing",
    "migration",
    "capacity-planning",
    "red-hat"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

# No external dependencies - pure stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
templates = [
    "jinja2>=3.0.0",
]
pdf = [
    "weasyprint>=60.0",
]
cli = [
    "rich>=13.0.0",
]
all = [
    "ocp-sizing-calculator[dev,templates,pdf,cli]",
]

[project.scripts]
ocp-sizing = "generate_report:main"

[project.urls]
Homepage = "https://github.com/anatsheh84/ocp-sizing"
Repository = "https://github.com/anatsheh84/ocp-sizing.git"
Issues = "https://github.com/anatsheh84/ocp-sizing/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "parsers*", "analyzers*", "reporters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["models", "parsers", "analyzers", "reporters"]
